Camera lens can't be edited after keyframing it #55253

Closed
opened 2018-05-29 23:31:58 +02:00 by Dalai Felinto · 5 comments

Blender Version
Broken: 9992079d59 (blender2.8 HEAD)

Short description of error
I can't edit the camera lens after keyframing it. Note, using the camera lens manipulator works.

Exact steps for others to reproduce the error

  • Make default camera the active.
  • Go to Camera panel and keyframe the camera lens.
  • Now try to edit the camera lens, you can't.

Sample file with the camera lens already keyframed:
cam.blend

This happens with or without copy-on-write.

**Blender Version** Broken: 9992079d597f (blender2.8 HEAD) **Short description of error** I can't edit the camera lens after keyframing it. Note, using the camera lens manipulator works. **Exact steps for others to reproduce the error** * Make default camera the active. * Go to Camera panel and keyframe the camera lens. * Now try to edit the camera lens, you can't. Sample file with the camera lens already keyframed: [cam.blend](https://archive.blender.org/developer/F3508192/cam.blend) This happens with or without copy-on-write.
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Campbell Barton was assigned by Dalai Felinto 2018-05-29 23:42:19 +02:00
Author
Owner

Added subscribers: @ideasman42, @Sergey

Added subscribers: @ideasman42, @Sergey
Author
Owner

@ideasman42 even if I remove rna_Camera_update from camera.lens update, I still can't have problems if I try to change lens clicking in the number slider. Dragging the slider or writing the new values work though.

So we may need a different approach here, other than the automatic rna tagging.

@ideasman42 even if I remove `rna_Camera_update` from `camera.lens update`, I still can't have problems if I try to change lens clicking in the number slider. Dragging the slider or writing the new values work though. So we may need a different approach here, other than the automatic rna tagging.

This issue was referenced by 6afa0a7a50

This issue was referenced by 6afa0a7a50fdd579c4545a8b7718e79d4a6a78be

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55253
No description provided.