Fix T55253: Camera lens can't be edited after keyframing it

Bring back animation channel exception for tag flag=0.